# pyirk-django

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
.circleci/: config.yml
.github/workflows/: python-app.yml
django_project/: settings.py
mainapp/: models.py  release.py  tests.py  urls.py  util.py  views.py  vis_integration.py
mainapp/management/commands/: interactive_debug.py
mainapp/migrations/: 0001_initial.py  0002_alter_item_id.py  0003_auto_20220701_1735.py  0004_auto_20220701_1740.py  0005_rename_item_entity.py  0006_languagespecifiedstring.py  0007_auto_20220714_2345.py  0008_remove_entity_key_str_entity_uri.py
mainapp/static/mainapp/: base.css  main.js  pyerk-ace.js
mainapp/templates/mainapp/: base.html  entity-detail-page.html  entity-detail.html  entity-list-entry.html  entity-namespaces.html  entity-relations.html  landing-page.html  main.html  page-entity-detail.html  page-landing.html  page-mockup.html  page-searchresult-test-page.html  page-sparql.html  script-entity-list-entry-json.html  searchresult-test-page.html  searchresult-test.html  widget-entity-inline.html  widget-entity-list-entry.html  widget-entity-relations.html  widget-entity-scopes.html
mainapp/templatetags/: extra_filters.py
src/pyerkdjango/: apps.py  core.py  django_setup.py  release.py  tests.py  urls.py  util.py  views.py  vis_integration.py
src/pyerkdjango/django_project/: settings.py  urls.py
src/pyirkdjango/: django_setup.py  models.py  release.py  urls.py  util.py  vis_integration.py
src/pyirkdjango/content/: file1.md
tests/: test_web.py
(+23 files in other folders)
